fixed some media queries and align center

--- a/css/quries.css
+++ b/css/quries.css
@@ -21,7 +21,7 @@
 /* ************************* */
 @media (max-width: 68em) {
   .container-textbox {
-    width: 60%;
+    width: 55%;
   }
   body {
     font-size: 1rem;
@@ -41,7 +41,7 @@
 /* ************************* */
 @media (max-width: 50em) {
   .container-textbox {
-    width: 65%;
+    width: 60%;
     padding: 0.2rem;
   }
   body {
@@ -56,7 +56,7 @@
 /* ************************* */
 @media (max-width: 37em) {
   .container-textbox {
-    width: 80%;
+    width: 75%;
     padding: 0.1rem;
   }
   body {
