--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,8 @@ body {
   gap: 2rem;
   padding: 1.2rem;
   cursor: pointer;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  /* margin-left: 2rem;
+  margin-right: 2rem; */
 }
 .main-nav-link {
   text-decoration: none;
@@ -45,11 +45,20 @@ body {
   min-width: 10rem;
   text-align: center;
 }
+.middle-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
 .footer {
   background-color: #f2f2f2;
   position: absolute;
   bottom: 0;
+  left: 0;
+  position: fixed;
   width: 100%;
   /* font-size: 1.4rem; */
 }
@@ -70,8 +79,8 @@ body {
   display: flex;
   gap: 2rem;
   cursor: pointer;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  /* margin-left: 2rem;
+  margin-right: 2rem; */
 }
 .google-logo {
   width: 25%;
